src/main/java/org/example/videoclub/errors/PeliculaNoEncontradaException.java
package org.example.videoclub.errors;

public class PeliculaNoEncontradaException extends Exception{

    public PeliculaNoEncontradaException(String message) {
        super(message);
    }

}
